vlib/v/checker/tests/no_interface_instantiation_b.vv
interface Speaker {}

fn my_fn(_ Speaker) {}

fn main() {
    my_fn({})
}
